--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply bg-vantactGray-500 text-white overflow-hidden;
+  @apply bg-vantactGray-500 text-white overflow-hidden font-mulish;
 }
