feat: wip channels

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,9 @@
 body {
   @apply bg-vantactGray-500 text-white overflow-hidden font-mulish;
 }
+
+@layer {
+  .custom_scrollbar {
+    @apply scrollbar-thin scrollbar-thumb-cloudy-500 hover:scrollbar-thumb-cloudy-400 scrollbar-track-rounded-full scrollbar-thumb-rounded-full scrollbar-track-cloudy-600;
+  }
+}
